# react-native-jsi-cpr

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-jsi-cpr.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/libs/curl/x86_64/: libcurl.la
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: HttpHelper.cpp  HttpHelper.h
android/src/main/java/com/jsicpr/: CertUtils.java  HttpHelper.java  JsiCprModule.java  JsiCprPackage.java
android/src/main/java/com/reactnativejsicpr/: CertUtils.java  HttpHelper.java  JsiCprModule.java  JsiCprPackage.java
cpp/: JsiHttp.cpp  JsiHttp.h  JsiUtils.cpp  JsiUtils.h  Logger.cpp  Logger.h  ThreadPool.cpp  ThreadPool.h  react-native-jsi-cpr.cpp  react-native-jsi-cpr.h
cpp/cpr/: multipart.cpp  session.cpp
cpp/include/cpr/: cpr.h  filesystem.h  multipart.h  session.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativejsicpr/: ReactNativeFlipper.java
example/android/app/src/debug/java/com/jsicprexample/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativejsicpr/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/jsicprexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/jsicprexample/: ReactNativeFlipper.java
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: File.swift  Podfile
example/ios/JsiCprExample/: AppDelegate.m  AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/JsiCprExample.xcodeproj/: project.pbxproj
example/ios/JsiCprExample.xcodeproj/xcshareddata/xcschemes/: JsiCprExample.xcscheme
example/ios/JsiCprExample.xcworkspace/: contents.xcworkspacedata
example/ios/JsiCprExampleTests/: JsiCprExampleTests.m
example/src/: App.tsx
example/tests/server/: app.js  package.json
ios/: JsiCpr.h  JsiCpr.mm
ios/JsiCpr.xcodeproj/: project.pbxproj
scripts/: build_cpr.sh  cpr1.patch
src/: CurlHelper.ts  buildURL.ts  index.tsx  types.ts
